# boost-python-examples

01-HelloWorld/: CMakeLists.txt  hello.cpp
02-ExposingClasses/: CMakeLists.txt  classes.cpp  classes.py
03-Constructors/: CMakeLists.txt  Omega.cpp  ctor.cpp  omega.py
